update map1, add screenshots, simp geojson

--- a/map2.html
+++ b/map2.html
@@ -21,7 +21,11 @@
     <div class="map-overlay" id="features">
       <h2>US 2020 COVID Case Count</h2>
       <h4>Total cases per county in 2020</h4>
-      <div id="pd"><p><b>Click on a county (dot) to explore!</b></p></div>
+      <hr />
+      <div id="pd">
+        <p><b>Click on a county (dot) to explore!</b></p>
+      </div>
+      <hr />
       <p>
         COVID case data -
         <a
