--- a/map1.html
+++ b/map1.html
@@ -24,9 +24,12 @@
     <div id="map"></div>
     <div class="map-overlay" id="features">
       <h1>US COVID Rate by County</h1>
+      <h3>Case rate per county</h3>
+      <hr>
       <div id="pd">
-        <p>Hover over a county!</p>
+        <p>Hover over a county to see more!</p>
       </div>
+      <hr>
       <p>
         COVID case data -
         <a
